Change social media order and fix overlapping

--- a/styles.css
+++ b/styles.css
@@ -160,6 +160,8 @@ nav {
 .first-section {
   background-color: white;
   border-bottom-left-radius: 60px;
+  position: relative;
+  z-index: -3;
 }
 
 .header-banner {
@@ -173,6 +175,8 @@ nav {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: relative;
+  z-index: -2;
 }
 
 @keyframes grow {
@@ -212,6 +216,8 @@ nav {
   margin-top: 5px;
   align-items: center;
   min-width: 250px;
+  position: relative;
+  z-index: -1;
 }
 
 .social-media-icons img {
@@ -399,6 +405,8 @@ ul {
   background-color: white;
   padding-bottom: 60px;
   border-top-left-radius: 60px;
+  position: relative;
+  z-index: -2;
 }
 
 .languages {
@@ -823,6 +831,7 @@ textarea::placeholder {
   position: fixed;
   inset: 0;
   background-color: rgba(128, 128, 128, 0.9);
+  overflow: scroll;
 }
 
 .modal-box {
@@ -831,6 +840,7 @@ textarea::placeholder {
   justify-content: center;
   align-items: center;
   margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .modal-dialog {
@@ -838,7 +848,7 @@ textarea::placeholder {
   width: 100%;
   width: calc(min(1000px, 90%));
   background-color: white;
-  padding: 16px;
+  padding: 16px 16px 65px 16px;
   border-radius: 8px;
 }
 
@@ -892,9 +902,10 @@ textarea::placeholder {
     padding: 16px 20px 70px;
   }
 
-  .sourc-box {
+  .source-box {
     width: 350px;
     margin-top: 10px;
+    display: flex;
   }
 
   .btn-modal {
@@ -906,7 +917,7 @@ textarea::placeholder {
     text-align: center;
   }
 
-  .modal-container .sourc-box {
+  .modal-container .source-box {
     border-top: 0.2px solid rgb(94, 94, 94, 0.2);
     padding-top: 30px;
   }
@@ -921,5 +932,6 @@ textarea::placeholder {
     width: 60px;
     justify-content: center;
     gap: 20px;
+    width: fit-content;
   }
 }
